<resources>
    <string name="app_name">ChatFirebaseDemo</string>
    <string name="n_o_tem_conta_cadastre_se">Não tem conta? Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="preencher_campos">Todos os campos devem ser preenchidos</string>
    <string name="j_tenho_conta_fazer_login">Já tem conta? Faça login</string>
    <string name="senha_seis_caracteres">A senha deve conter pelo menos 6 caracteres</string>
    <string name="foto">Foto</string>
    <string name="sucesso_cadastro">Cadastro realizado com sucesso</string>
    <string name="email_senha_incorretos">Email e/ou senha incorretos</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="contatos">Contatos</string>
    <string name="logout">Logout</string>
</resources>
