<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="35dp"
    android:background="@color/colorBackgroud">

    <EditText
        android:id="@+id/activity_register_edt_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/edt_bg"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:paddingHorizontal="10dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_register_bt_select_photo" />

    <EditText
        android:id="@+id/activity_register_edt_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/edt_bg"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_register_edt_name" />

    <EditText
        android:id="@+id/activity_register_edt_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textColor="@color/colorAccent"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:background="@drawable/edt_bg"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/senha"
        android:paddingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_register_edt_email" />

    <TextView
        android:id="@+id/activity_register_tv_go_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/j_tenho_conta_fazer_login"
        android:textStyle="bold"
        android:textColor="@color/btBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_register_bt_register" />

    <Button
        android:id="@+id/activity_register_bt_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bt_login_rounded"
        android:text="Cadastrar"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_register_edt_password" />

    <Button
        android:id="@+id/activity_register_bt_select_photo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:text="@string/foto"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/bt_photo_selected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>