<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="35dp"
    android:background="@color/colorBackgroud">

    <EditText
        android:id="@+id/activity_login_edt_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/edt_bg"
        android:ems="10"
        android:textColor="@color/colorAccent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_login_edt_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textColor="@color/colorAccent"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:background="@drawable/edt_bg"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/senha"
        android:paddingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_edt_email" />

    <TextView
        android:id="@+id/activity_login_tv_go_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/n_o_tem_conta_cadastre_se"
        android:textStyle="bold"
        android:textColor="@color/btBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_bt_login" />

    <Button
        android:id="@+id/activity_login_bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bt_login_rounded"
        android:text="@string/entrar"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_edt_password" />

    <ProgressBar
        android:id="@+id/activity_login_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>